<resources>
    <string name="app_name">Password Manager V</string>

    <string name="website">Website</string>
    <string name="login">Login</string>
    <string name="password">Password (4 characters)</string>
    <string name="save">Save</string>
    <string name="click">Click</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="clear_out">Clear out</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="setting">Setting</string>
    <string name="Settings">Settings</string>
    <string name="update">Update</string>
    <string name="toolbar_title_list">Items</string>
    <string name="change_access_code">Change access code</string>
    <string name="next">next</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_you_pin_code">Create you password!!!</string>
    <string name="username">Username</string>
    <string name="password_">Password</string>
    <string name="add">Add</string>
</resources>
