<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui_main.fragments.add_user_fragment.AddUserFragment">

    <EditText
        android:id="@+id/et_addUserFragment_website"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="@color/et_color_backgroundTint"
        android:ems="10"
        android:hint="@string/website"
        android:imeOptions="flagNoExtractUi"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/et_addUserFragment_username_or_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_addUserFragment_username_or_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="@color/et_color_backgroundTint"
        android:ems="10"
        android:hint="@string/login"
        android:imeOptions="flagNoExtractUi"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/et_addUserFragment_password"
        app:layout_constraintEnd_toEndOf="@+id/et_addUserFragment_website"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_addUserFragment_website"
        app:layout_constraintTop_toBottomOf="@+id/et_addUserFragment_website" />

    <EditText
        android:id="@+id/et_addUserFragment_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="@color/et_color_backgroundTint"
        android:ems="10"
        android:hint="@string/password_"
        android:imeOptions="flagNoExtractUi"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/btn_addUserFragment_add"
        app:layout_constraintEnd_toEndOf="@+id/et_addUserFragment_username_or_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_addUserFragment_username_or_email"
        app:layout_constraintTop_toBottomOf="@+id/et_addUserFragment_username_or_email"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btn_addUserFragment_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/app_button"
        android:text="@string/add"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_addUserFragment_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_addUserFragment_password"
        app:layout_constraintTop_toBottomOf="@+id/et_addUserFragment_password" />

</androidx.constraintlayout.widget.ConstraintLayout>