<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorPrimaryLight"
        app:cardCornerRadius="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/iv_website"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:scaleType="center"
                    android:src="@drawable/ic_vpn_lock_black_24dp" />

                <TextView
                    android:id="@+id/website_rv_item"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_toStartOf="@+id/iv_rv_item"
                    android:layout_toEndOf="@+id/iv_website"
                    android:padding="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/website" />

                <ImageView
                    android:id="@+id/iv_rv_item"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:scaleType="center"
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />
            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/expandable_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/username_or_email_rv_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:paddingStart="48dp"
                    android:paddingEnd="8dp"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    tools:text="@string/username" />

                <TextView
                    android:id="@+id/password_rv_item"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:paddingStart="48dp"
                    android:paddingEnd="8dp"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    tools:text="@string/password_" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>